remove temp files

--- a/.gitignore
+++ b/.gitignore
@@ -136,4 +136,25 @@ web_modules/
 .history
 .ionide
 
+### MicrosoftOffice ###
+*.tmp
+
+# Word temporary
+~$*.doc*
+
+# Word Auto Backup File
+Backup of *.doc*
+
+# Excel temporary
+~$*.xls*
+
+# Excel Backup File
+*.xlk
+
+# PowerPoint temporary
+~$*.ppt*
+
+# Visio autosave temporary files
+*.~vsd*
+
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,node
