--- a/package.json
+++ b/package.json
@@ -12,18 +12,10 @@
   "author": "Pasquale Silvestri, Marco Lo Pinto",
   "license": "ISC",
   "devDependencies": {
-    "@babylonjs/controls": "^1.0.0-alpha.1",
-    "@babylonjs/core": "^4.2.0",
-    "@babylonjs/gui": "^4.2.0",
-    "@babylonjs/inspector": "^4.2.0",
-    "@babylonjs/loaders": "^4.2.0",
-    "@babylonjs/materials": "^4.2.0",
-    "@babylonjs/post-processes": "^4.2.0",
-    "@babylonjs/procedural-textures": "^4.2.0",
-    "@babylonjs/serializers": "^4.2.0",
     "css-loader": "^5.2.6",
     "html-webpack-plugin": "^5.3.2",
     "style-loader": "^2.0.0",
+    "three": "^0.129.0",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
